--- a/releng/frida.props
+++ b/releng/frida.props
@@ -8,6 +8,10 @@
     <ValaFlags>--vapidir="$(SolutionDir)frida-core\vapi" --vapidir="$(SolutionDir)frida-gum\vapi" --vapidir="$(SolutionDir)build\sdk-windows\$(Platform)-$(Configuration)\share\vala\vapi"</ValaFlags>
     <V8Arch Condition=" '$(Platform)' == 'Win32' ">ia32</V8Arch>
     <V8Arch Condition=" '$(Platform)' == 'x64' ">x64</V8Arch>
+    <Python27InstallPath32>$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Python\PythonCore\2.7\InstallPath)</Python27InstallPath32>
+    <Python33InstallPath32>$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Wow6432Node\Python\PythonCore\3.3\InstallPath)</Python33InstallPath32>
+    <Python27InstallPath64>$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Python\PythonCore\2.7\InstallPath)</Python27InstallPath64>
+    <Python33InstallPath64>$(Registry:HKEY_LOCAL_MACHINE\SOFTWARE\Python\PythonCore\3.3\InstallPath)</Python33InstallPath64>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
