--- a/releng/frida.props
+++ b/releng/frida.props
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
     <OutDir>$(SolutionDir)build\frida-windows\$(PlatformName)-$(Configuration)\bin\</OutDir>
     <IntDir>$(SolutionDir)build\tmp-windows\$(PlatformName)-$(Configuration)\$(ProjectName)\</IntDir>
-    <ValaCompiler>$(SolutionDir)build\toolchain-windows\bin\valac-0.14.exe</ValaCompiler>
+    <ValaCompiler>$(SolutionDir)build\toolchain-windows\bin\valac-0.26.exe</ValaCompiler>
     <ValaFlags>--vapidir="$(SolutionDir)frida-core\vapi" --vapidir="$(SolutionDir)frida-gum\vapi" --vapidir="$(SolutionDir)build\sdk-windows\$(Platform)-$(Configuration)\share\vala\vapi"</ValaFlags>
     <V8Arch Condition=" '$(Platform)' == 'Win32' ">ia32</V8Arch>
     <V8Arch Condition=" '$(Platform)' == 'x64' ">x64</V8Arch>
