Add xz and libunwind to the Linux and Android SDKs

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -93,6 +93,23 @@ if [ -x /usr/bin/install ]; then
 fi
 
 case "$PACKAGE_TARNAME" in
+  'xz')
+    enable_shared=no
+    enable_static=yes
+  ;;
+  'libunwind')
+    enable_shared=no
+    enable_static=yes
+    enable_coredump=no
+    enable_ptrace=no
+    enable_setjmp=no
+    enable_cxx_exceptions=no
+    enable_msabi_support=no
+    enable_minidebuginfo=yes
+
+    CFLAGS="$CFLAGS -I$frida_prefix/include"
+    LDFLAGS="$LDFLAGS -L$frida_prefix/lib"
+  ;;
   'libffi')
     CFLAGS="$CFLAGS -DFFI_MMAP_EXEC_WRIT=1 -DFFI_MMAP_EXEC_SELINUX=0"
     enable_shared=no
