Explicitly disable libunwind debug support

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -103,6 +103,7 @@ case "$PACKAGE_TARNAME" in
     enable_coredump=no
     enable_ptrace=no
     enable_setjmp=no
+    enable_debug=no
     enable_cxx_exceptions=no
     enable_msabi_support=no
     enable_minidebuginfo=yes
