Fix proxy_libintl for QNX; Nuke snapshot=off
Use enable_proxy_libintl to avoid dependence on gettext when
compiling for QNX.

Turn off the snapshot=off for QNX

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -154,7 +154,7 @@ case "$PACKAGE_TARNAME" in
     esac
 
     case $frida_host_platform in
-      linux|android|mac|ios)
+      linux|android|mac|ios|qnx)
         enable_proxy_libintl=yes
       ;;
     esac
