--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -31,6 +31,10 @@ case $frida_host_platform_arch in
     host_alias="x86_64-linux-gnu"
     cross_compiling=no
   ;;
+  qnx-i486)
+    host_alias="i486-pc-nto-qnx6.6.0"
+    cross_compiling=yes
+  ;;
   qnx-arm)
     host_alias="arm-unknown-nto-qnx6.6.0eabi"
     cross_compiling=yes
