--- a/releng/frida-Release.props
+++ b/releng/frida-Release.props
@@ -19,7 +19,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
 
-      <PreprocessorDefinitions>NDEBUG;G_DISABLE_CAST_CHECKS;G_DISABLE_CHECKS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>G_DISABLE_CAST_CHECKS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <LinkIncremental>false</LinkIncremental>
