Add changes to get to working QNX 6.5.0 build

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -36,7 +36,7 @@ case $frida_host_platform_arch in
     cross_compiling=yes
   ;;
   qnx-arm)
-    host_alias="arm-unknown-nto-qnx6.5.0eabi"
+    host_alias="arm-unknown-nto-qnx6.5.0"
     cross_compiling=yes
   ;;
   android-i386)
