Add Frida version constants to the Windows build system

--- a/releng/frida-builddeps.vcxproj.filters
+++ b/releng/frida-builddeps.vcxproj.filters
@@ -17,5 +17,6 @@
   <ItemGroup>
     <CustomBuild Include="windows-sdk.txt" />
     <CustomBuild Include="windows-toolchain.txt" />
+    <CustomBuild Include="generate-version-header.py" />
   </ItemGroup>
 </Project>
