Temporarily enable diet mode

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -193,6 +193,7 @@ case "$PACKAGE_TARNAME" in
   ;;
   frida-*)
     enable_maintainer_mode=yes
+    enable_diet=yes
     frida_flags="$frida_warning_flags $frida_flags"
   ;;
   *)
