Only enable diet mode for mobile and embedded targets

--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -26,12 +26,10 @@ case $frida_host_platform_arch in
   linux-arm)
     host_alias="arm-linux-gnueabi"
     cross_compiling=yes
-    enable_diet=yes
   ;;
   linux-armhf)
     host_alias="arm-linux-gnueabihf"
     cross_compiling=yes
-    enable_diet=yes
   ;;
   linux-i386)
     host_alias="i686-linux-gnu"
@@ -100,6 +98,15 @@ case $frida_host_platform_arch in
   ios-arm64)
     host_alias="aarch64-apple-darwin"
     cross_compiling=yes
+  ;;
+esac
+
+case $frida_host_platform_arch in
+  linux-arm|linux-armhf|qnx-*|android-*|ios-*)
+    enable_diet=yes
+  ;;
+  *)
+    enable_diet=no
   ;;
 esac
 
@@ -193,7 +200,6 @@ case "$PACKAGE_TARNAME" in
   ;;
   frida-*)
     enable_maintainer_mode=yes
-    enable_diet=yes
     frida_flags="$frida_warning_flags $frida_flags"
   ;;
   *)
