--- a/releng/frida-builddeps.vcxproj
+++ b/releng/frida-builddeps.vcxproj
@@ -244,6 +244,50 @@ REM. &gt; "$(IntDir)frida-version.stamp"
       <LinkObjects Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</LinkObjects>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="windows-babel.txt">
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Installing Babel</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(IntDir)windows-babel.stamp;%(Outputs)</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Installing Babel</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(IntDir)windows-babel.stamp;%(Outputs)</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Installing Babel</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(IntDir)windows-babel.stamp;%(Outputs)</Outputs>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Installing Babel</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(IntDir)windows-babel.stamp;%(Outputs)</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">npm --version &gt;NUL 2&gt;NUL
+if errorlevel 1 (
+  echo Node.js not found on your PATH
+  exit 1
+)
+cd "$(ProjectDir)..\frida-gum\bindings\gumjs\"
+npm install || exit 1
+echo &gt; "$(IntDir)windows-babel.stamp"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">npm --version &gt;NUL 2&gt;NUL
+if errorlevel 1 (
+  echo Node.js not found on your PATH
+  exit 1
+)
+cd "$(ProjectDir)..\frida-gum\bindings\gumjs\"
+npm install || exit 1
+echo &gt; "$(IntDir)windows-babel.stamp"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">npm --version &gt;NUL 2&gt;NUL
+if errorlevel 1 (
+  echo Node.js not found on your PATH
+  exit 1
+)
+cd "$(ProjectDir)..\frida-gum\bindings\gumjs\"
+npm install || exit 1
+echo &gt; "$(IntDir)windows-babel.stamp"</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">npm --version &gt;NUL 2&gt;NUL
+if errorlevel 1 (
+  echo Node.js not found on your PATH
+  exit 1
+)
+cd "$(ProjectDir)..\frida-gum\bindings\gumjs\"
+npm install || exit 1
+echo &gt; "$(IntDir)windows-babel.stamp"</Command>
+    </CustomBuild>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
