--- a/releng/config.site.in
+++ b/releng/config.site.in
@@ -153,6 +153,7 @@ case "$PACKAGE_TARNAME" in
   'libffi')
     CFLAGS="$CFLAGS -DFFI_MMAP_EXEC_WRIT=1 -DFFI_MMAP_EXEC_SELINUX=0"
 
+    enable_docs=no
     enable_multi_os_directory=no
 
     enable_shared=no
