Disable LTCG for Windows Release builds
This means our prebuilt dependencies will be compatible with multiple
service-releases of MSVS.

--- a/releng/frida-Release.props
+++ b/releng/frida-Release.props
@@ -10,7 +10,7 @@
     <ClCompile>
       <Optimization>MinSpace</Optimization>
       <FavorSizeOrSpeed>Size</FavorSizeOrSpeed>
-      <WholeProgramOptimization>true</WholeProgramOptimization>
+      <WholeProgramOptimization>false</WholeProgramOptimization>
       <StringPooling>true</StringPooling>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <BufferSecurityCheck>false</BufferSecurityCheck>
